fix: checkbox/radio and text alignment in chrome

--- a/src/styles/typesettings.scss
+++ b/src/styles/typesettings.scss
@@ -710,7 +710,7 @@ body {
   [type=checkbox],
   [type=radio] {
     padding: 0;
-    transform: scale(var(--ts-line-height-body)) translateY(-1px); // Scales up the input to match the text better. This gets removed in Android Chrome, see end of file.
+    transform: scale(var(--ts-line-height-body)) translateY(-0.1em); // Scales up the input to match the text better. The alignment would be adjusted for Chrome specifically, see end of file.
   }
 
   [type=number]::-webkit-inner-spin-button,
@@ -1317,6 +1317,18 @@ body {
       margin-inline-start: 0;
       -webkit-margin-end: 0;
       margin-inline-end: 0;
+    }
+  }
+
+  @media all and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
+    [type="checkbox"]:not(*:root),
+    [type="radio"]:not(*:root) {
+      transform: translateY(-0.05ex); // Align the checkbox/radio better with text in Chrome.
+    }
+
+    form:not(*:root) {
+      line-height: var(--ts-line-height-heading);
+      font-size: inherit; // Reset font-size on Android Chrome.
     }
   }
 }
